# office-word-count

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
src/office_word_count/: __init__.py
src/word_counter_upchunk/: __init__.py  counter.py  patterns.py  stats.py  text.py
