[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "word_counter_upchunk"
version = "1.0.0"
authors = [
  { name="Habibul Rahman Qalbi", email="habi6799@gmail.com" },
]
description = "A drop-in-replacement for (discontinued) office-word-count"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "regex",
]

[project.urls]
Homepage = "https://github.com/upchunk/office-word-count"
Issues = "https://github.com/upchunk/office-word-count/issues"